fix: service icon spacing

--- a/src/components/Landing/ServiceSection/service-section.module.css
+++ b/src/components/Landing/ServiceSection/service-section.module.css
@@ -20,6 +20,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: flex-end;
     margin: 3rem 0;
 }
 
